--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@tailwindcss/postcss": "^4.1.5",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.483.0",
-    "next": "14.1.0",
+    "next": "^15.4.0-canary.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.15.1",
@@ -33,7 +34,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5"
   }
 }
