--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@tanstack/react-query": "^5.81.2",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@web3icons/core": "^4.0.14",
+    "@web3icons/react": "^4.0.14",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.483.0",
     "next": "^14.2.30",
