--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
-    "@tanstack/react-query": "^5.81.2",
+    "@reown/appkit": "^1.7.15",
+    "@reown/appkit-adapter-wagmi": "^1.7.15",
+    "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.483.0",
-    "next": "^14.2.30",
+    "next": "^15.4.1",
     "pino-pretty": "^13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.15.1",
-    "viem": "^2.31.4",
-    "wagmi": "^2.15.6"
+    "viem": "^2.32.0",
+    "wagmi": "^2.15.7"
   },
   "devDependencies": {
     "@types/node": "^20",
