--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@reown/appkit-adapter-wagmi": "^1.7.15",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "geist": "^1.4.2",
     "lucide-react": "^0.483.0",
     "next": "^15.4.4",
     "pino-pretty": "^13.0.0",
