--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@bijection/smoke": "^1.0.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@reown/appkit": "^1.7.15",
@@ -18,9 +19,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
-    "lucide-react": "^0.483.0",
     "next": "^15.4.4",
     "pino-pretty": "^13.0.0",
+    "pixelarticons": "^1.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.15.1",
