--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.544.0",
     "next": "^15.4.4",
+    "ogl": "^1.0.11",
     "pino-pretty": "^13.0.0",
     "pixelarticons": "^1.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.32.0",
     "wagmi": "^2.15.7"
   },
