--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "geist": "^1.4.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.15",
     "next": "^15.4.4",
     "ogl": "^1.0.11",
     "pino-pretty": "^13.0.0",
