--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "geist": "^1.4.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.15",
-    "next": "^15.4.4",
+    "motion": "^12.23.16",
+    "next": "^15.5.3",
     "ogl": "^1.0.11",
     "pino-pretty": "^13.0.0",
     "pixelarticons": "^1.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.3.1",
@@ -39,17 +39,17 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^15.5.3",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
